tiny mod to retry add/push

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -1,6 +1,6 @@
 name: Tests    # Action Name
 
-# specify Events that trigger this Action
+# specify Events that trigger this Action.
 on:
   - push
 
