--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -8,7 +8,7 @@ on:
 jobs:
 
   test:
-    runs-on: umbuntu-latest    # OS or image to run on (can also specify version)
+    runs-on: ubuntu-latest    # OS or image to run on (can also specify version)
 
     steps:
       - uses: actions/checkout@v3  # checks out the Repository
